lab/istio/examples/fault-injection/istio-objects/virtualservice-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-fault-injection-delay
  namespace: demo
spec:
  hosts:
  - demo.example.com
  - demo.demo.svc.cluster.local
  gateways:
  - ingress-gateway
  http:
  - fault:
      delay:
        fixedDelay: 7s
        percentage:
          value: 30
    match:
    - headers:
        fault:
          exact: "delay"
    route:
    - destination:
        host: demo
  - route:
    - destination:
        host: demo
