lab/istio/examples/fault-injection/istio-objects/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo
  namespace: demo
spec:
  hosts:
  - demo.example.com
  - demo.demo.svc.cluster.local
  gateways:
  - ingress-gateway
  http:
  - fault:
      abort:
        httpStatus: 503
        percentage:
          value: 50
    match:
    - headers:
        fault:
          exact: "true"
    route:
    - destination:
        host: demo
  - route:
    - destination:
        host: demo
